chore: color contrast fix

--- a/styles/theme/default.css
+++ b/styles/theme/default.css
@@ -4,7 +4,7 @@
 :root {
   color-scheme: light dark;
   --color-white: #fff;
-  --color-blue: #1f7ae0;
+    --color-blue: #1a75da;
   --color-green: #19af55;
   --color-purple: #805de1;
   --color-border: #dde0e4;
